--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "hot": "mix watch --hot",
         "prod": "npm run production",
         "production": "mix --production",
-        "heroku-postbuild": "npm run prod"
+        "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install && npm run prod"
     },
     "devDependencies": {
         "axios": "^0.21",
