--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
         "hot": "mix watch --hot",
         "prod": "npm run production",
         "production": "mix --production",
-        "heroku-prebuild": "export NPM_CONFIG_PRODUCTION=false; export NODE_ENV=; NPM_CONFIG_PRODUCTION=false NODE_ENV=development npm install --only=dev --dev",
-        "heroku-postbuild": "npm run prod",
+        "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false && npm install && npm run prod",
         "postinstall": "npm run prod"
     },
     "devDependencies": {
