--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
         "hot": "mix watch --hot",
         "prod": "npm run production",
         "production": "mix --production",
-        "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install && npm run prod",
-        "postinstall": "npm run prod"
+        "heroku-prebuild": "export NPM_CONFIG_PRODUCTION=false; export NODE_ENV=; NPM_CONFIG_PRODUCTION=false NODE_ENV=development npm install --only=dev --dev",
+        "heroku-postbuild": "export NPM_CONFIG_PRODUCTION=true; export NODE_ENV=production; npm run prod"
     },
     "devDependencies": {
         "axios": "^0.21",
